# collage

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml  release.yaml
assets/models/: billboard.glb  clear-skies.glb  cube.glb
src/: args.rs  button_predicate.rs  button_timer.rs  effects.rs  main.rs  predicate_timer.rs  state.rs  toggle_free_camera.rs
src/clear_skies/: camera.rs  mod.rs  paint.rs  plugin.rs  render_layers.rs  resolution.rs  state.rs  switch_gamepads.rs  transition.rs
src/clear_skies/paint_skies/: control_spherical_coords.rs  mod.rs  paint_layer_history.rs  paint_meshes.rs  player.rs  plugin.rs  settings.rs  spherical_coords.rs  triangle_with_uvs.rs
src/clear_skies/play_skies/: camera.rs  mod.rs  plugin.rs
