[package]
name = "collage"
version = "0.1.0"
edition = "2024"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.17"
bevy-inspector-egui = "0.35.0"
bevy_asset_loader = "0.24.0"
bevy_pipe_affect = { version = "0.1.0", features = ["asset_server", "derive"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
leafwing-input-manager = "0.19.0"
thiserror = "2.0.17"

[features]
dev = []

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
